# zerohour-big-explorer

./: .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.githooks/: pre-commit
.github/: CONSTITUTION.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
benchmarks/: Cargo.toml  run.sh
benchmarks/src/: main.rs
big-cli/: Cargo.toml
big-cli/src/: main.rs
big-core/: Cargo.toml
big-core/src/: archive.rs  entry.rs  extract.rs  index.rs  iterator.rs  lib.rs  models.rs  pack.rs  parser.rs  paths.rs  preview.rs  progress.rs  search.rs  validate.rs
big-core/tests/: extract_tests.rs  iterator_tests.rs  parser_tests.rs  progress_tests.rs  search_tests.rs  streaming_and_paths.rs  validate_more_tests.rs  validate_tests.rs
big-tauri/: .npmignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
big-tauri/src/: main.rs
big-tauri/src-tauri/: Cargo.toml  tauri.conf.json
docs/release-notes/: 002-big-archive-extraction.md
docs/user/: extract_pack.md
scripts/: cross-compile.sh  generate_samples.sh  install-git-hooks.sh
specs/001-big-archive-explorer/: README.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-big-archive-extraction/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: big-archive-ui.rs
tests/big-core/: pack_tests.rs
(+35 files in other folders)
